--- a/MyPassionProject.html
+++ b/MyPassionProject.html
@@ -2,6 +2,7 @@
 
 <html> 
 	<head> 
+		<link rel="stylesheet" type="text/css" href="MyPassionProject.css">
 		<title>Amiah's Passions Illustrated Thanks to iPhoto!</title>
 	</head> 
 	<body> 
@@ -14,7 +15,7 @@
 			<li>Food</li>
 			<img src="IMG_1700.JPG">
 			<p>I love food. Food is how I feel the most love hahaha</p>
-			
+
 			<li>Photography</li>
 			<img src="IMG_0023.jpg">
 			<p>I am kind of a novice/budding photographer. I really just like to take pictures of whatever looks cool</p>
