--- a/MyPassionProject.html
+++ b/MyPassionProject.html
@@ -9,6 +9,7 @@
 		<ol> 
 			<p>Here are some things that I loveeeee</p>
 			<li>Beach</li>
+			</div class="center"
 			<img src= "IMG_0046.JPG"
 			<p>I am originally from Los Angeles, CA--so naturally I love the beach. The beach is such a holy place for me; it's where the land meets the land!</> 
 
