--- a/MyPassionProject.html
+++ b/MyPassionProject.html
@@ -3,23 +3,35 @@
 <html> 
 	<head> 
 		<link rel="stylesheet" type="text/css" href="MyPassionProject.css">
-		<title>Amiah's Passions Illustrated Thanks to iPhoto!</title>
+		<title>Amiah's Passions </title>
 	</head> 
 	<body> 
 		<ol> 
+			<p>Hi! I'm Amiah</p>
 			<p>Here are some things that I loveeeee</p>
-			<li>Beach</li>
-			</div class="center"
-			<img src= "IMG_0046.JPG"
-			<p>I am originally from Los Angeles, CA--so naturally I love the beach. The beach is such a holy place for me; it's where the land meets the land!</> 
 
 			<li>Food</li>
+			<li>Beach</li>
+			<li>Photography</li>
+		</ol>
+			
+			
+		<div class="center">
+			<img src= "IMG_0046.JPG">
+			<p>I am originally from Los Angeles, CA <span class="WhiteText"> --so naturally I love the beach. </span> . The beach is such a holy place for me; it's where the land meets the land!</p> 
+		</div>
+
+		<div class="center">	
 			<img src="IMG_1700.JPG">
 			<p>I love food. Food is how I feel the most love hahaha</p>
-
-			<li>Photography</li>
+		</div>
+			
+		<div class='center'>
 			<img src="IMG_0023.jpg">
 			<p>I am kind of a novice/budding photographer. I really just like to take pictures of whatever looks cool</p>
+		</div>
+
+
 
 
 	</body> 
